--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-    "name": "nuxt-app",
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "build": "nuxt build",
-        "dev": "nuxt dev",
-        "generate": "nuxt generate",
-        "preview": "nuxt preview",
-        "postinstall": "nuxt prepare"
-    },
-    "devDependencies": {
-        "prettier": "^3.3.2",
-        "prettier-plugin-tailwindcss": "^0.6.5"
-    },
-    "dependencies": {
-        "@nuxt/ui": "2.17.0",
-        "nuxt": "3.12.3",
-        "vue": "latest",
-        "zod": "^3.23.8"
-    }
+  "name": "nuxt-app",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
+  },
+  "devDependencies": {
+    "nuxt-lodash": "^2.5.3",
+    "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.5"
+  },
+  "dependencies": {
+    "@nuxt/ui": "2.17.0",
+    "nuxt": "3.12.3",
+    "vue": "latest",
+    "zod": "^3.23.8"
+  }
 }
