--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,7 @@
     },
     "editor.quickSuggestions": {
         "strings": true
-    }
+    },
+    "i18n-ally.localesPaths": ["locales"],
+    "i18n-ally.keystyle": "flat"
 }
